--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
+    "react-rating": "^2.0.5",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^5.1.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
